update python client
