# erc_dex/erc_dex/api/orders_api.py
@@ -231,6 +231,95 @@ class OrdersApi(object):
             _request_timeout=params.get('_request_timeout'),
             collection_formats=collection_formats)
 
+    def get_fee_recipients(self, **kwargs):  # noqa: E501
+        """get_fee_recipients  # noqa: E501
+
+        This method makes a synchronous HTTP request by default. To make an
+        asynchronous HTTP request, please pass async=True
+        >>> thread = api.get_fee_recipients(async=True)
+        >>> result = thread.get()
+
+        :param async bool
+        :return: IFeeRecipientsResponse
+                 If the method is called asynchronously,
+                 returns the request thread.
+        """
+        kwargs['_return_http_data_only'] = True
+        if kwargs.get('async'):
+            return self.get_fee_recipients_with_http_info(**kwargs)  # noqa: E501
+        else:
+            (data) = self.get_fee_recipients_with_http_info(**kwargs)  # noqa: E501
+            return data
+
+    def get_fee_recipients_with_http_info(self, **kwargs):  # noqa: E501
+        """get_fee_recipients  # noqa: E501
+
+        This method makes a synchronous HTTP request by default. To make an
+        asynchronous HTTP request, please pass async=True
+        >>> thread = api.get_fee_recipients_with_http_info(async=True)
+        >>> result = thread.get()
+
+        :param async bool
+        :return: IFeeRecipientsResponse
+                 If the method is called asynchronously,
+                 returns the request thread.
+        """
+
+        all_params = []  # noqa: E501
+        all_params.append('async')
+        all_params.append('_return_http_data_only')
+        all_params.append('_preload_content')
+        all_params.append('_request_timeout')
+
+        params = locals()
+        for key, val in six.iteritems(params['kwargs']):
+            if key not in all_params:
+                raise TypeError(
+                    "Got an unexpected keyword argument '%s'"
+                    " to method get_fee_recipients" % key
+                )
+            params[key] = val
+        del params['kwargs']
+
+        collection_formats = {}
+
+        path_params = {}
+
+        query_params = []
+
+        header_params = {}
+
+        form_params = []
+        local_var_files = {}
+
+        body_params = None
+        # HTTP header `Accept`
+        header_params['Accept'] = self.api_client.select_header_accept(
+            ['application/json'])  # noqa: E501
+
+        # HTTP header `Content-Type`
+        header_params['Content-Type'] = self.api_client.select_header_content_type(  # noqa: E501
+            ['application/json'])  # noqa: E501
+
+        # Authentication setting
+        auth_settings = []  # noqa: E501
+
+        return self.api_client.call_api(
+            '/fee_recipients', 'GET',
+            path_params,
+            query_params,
+            header_params,
+            body=body_params,
+            post_params=form_params,
+            files=local_var_files,
+            response_type='IFeeRecipientsResponse',  # noqa: E501
+            auth_settings=auth_settings,
+            async=params.get('async'),
+            _return_http_data_only=params.get('_return_http_data_only'),
+            _preload_content=params.get('_preload_content', True),
+            _request_timeout=params.get('_request_timeout'),
+            collection_formats=collection_formats)
+
     def get_order_by_hash(self, order_hash, **kwargs):  # noqa: E501
         """get_order_by_hash  # noqa: E501
 
@@ -551,7 +640,7 @@ class OrdersApi(object):
         if 'quote_asset_data' in params:
             query_params.append(('quoteAssetData', params['quote_asset_data']))  # noqa: E501
         if 'per_page' in params:
-            query_params.append(('per_page', params['per_page']))  # noqa: E501
+            query_params.append(('perPage', params['per_page']))  # noqa: E501
         if 'page' in params:
             query_params.append(('page', params['page']))  # noqa: E501
 
@@ -612,8 +701,8 @@ class OrdersApi(object):
         :param str taker_address: Address of order taker
         :param str maker_asset_address: Token address of maker asset
         :param str maker_address: Address of order maker
-        :param str maker_asset_type: Maker asset type (only ERC20 supported)
-        :param str taker_asset_type: Taker asset type (only ERC20 supported)
+        :param str maker_asset_proxy_id:
+        :param str taker_asset_proxy_id:
         :param str pair:
         :return: IGetOrdersResponse
                  If the method is called asynchronously,
@@ -650,15 +739,15 @@ class OrdersApi(object):
         :param str taker_address: Address of order taker
         :param str maker_asset_address: Token address of maker asset
         :param str maker_address: Address of order maker
-        :param str maker_asset_type: Maker asset type (only ERC20 supported)
-        :param str taker_asset_type: Taker asset type (only ERC20 supported)
+        :param str maker_asset_proxy_id:
+        :param str taker_asset_proxy_id:
         :param str pair:
         :return: IGetOrdersResponse
                  If the method is called asynchronously,
                  returns the request thread.
         """
 
-        all_params = ['open', 'page', 'per_page', 'exchange_address', 'fee_recipient_address', 'taker_asset_data', 'maker_asset_data', 'sender_address', 'trader_asset_data', 'trader_address', 'taker_asset_address', 'taker_address', 'maker_asset_address', 'maker_address', 'maker_asset_type', 'taker_asset_type', 'pair']  # noqa: E501
+        all_params = ['open', 'page', 'per_page', 'exchange_address', 'fee_recipient_address', 'taker_asset_data', 'maker_asset_data', 'sender_address', 'trader_asset_data', 'trader_address', 'taker_asset_address', 'taker_address', 'maker_asset_address', 'maker_address', 'maker_asset_proxy_id', 'taker_asset_proxy_id', 'pair']  # noqa: E501
         all_params.append('async')
         all_params.append('_return_http_data_only')
         all_params.append('_preload_content')
@@ -684,7 +773,7 @@ class OrdersApi(object):
         if 'page' in params:
             query_params.append(('page', params['page']))  # noqa: E501
         if 'per_page' in params:
-            query_params.append(('per_page', params['per_page']))  # noqa: E501
+            query_params.append(('perPage', params['per_page']))  # noqa: E501
         if 'exchange_address' in params:
             query_params.append(('exchangeAddress', params['exchange_address']))  # noqa: E501
         if 'fee_recipient_address' in params:
@@ -707,10 +796,10 @@ class OrdersApi(object):
             query_params.append(('makerAssetAddress', params['maker_asset_address']))  # noqa: E501
         if 'maker_address' in params:
             query_params.append(('makerAddress', params['maker_address']))  # noqa: E501
-        if 'maker_asset_type' in params:
-            query_params.append(('makerAssetType', params['maker_asset_type']))  # noqa: E501
-        if 'taker_asset_type' in params:
-            query_params.append(('takerAssetType', params['taker_asset_type']))  # noqa: E501
+        if 'maker_asset_proxy_id' in params:
+            query_params.append(('makerAssetProxyId', params['maker_asset_proxy_id']))  # noqa: E501
+        if 'taker_asset_proxy_id' in params:
+            query_params.append(('takerAssetProxyId', params['taker_asset_proxy_id']))  # noqa: E501
         if 'pair' in params:
             query_params.append(('pair', params['pair']))  # noqa: E501
 
