# erc_dex/erc_dex/models/i_currency.py
@@ -1,0 +1,194 @@
+# coding: utf-8
+
+"""
+    ERC dEX REST API
+
+    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)  # noqa: E501
+
+    OpenAPI spec version: 0.0.1-alpha
+    
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+
+class ICurrency(object):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        'code': 'str',
+        'title': 'str',
+        'slug': 'str',
+        'url': 'str'
+    }
+
+    attribute_map = {
+        'code': 'code',
+        'title': 'title',
+        'slug': 'slug',
+        'url': 'url'
+    }
+
+    def __init__(self, code=None, title=None, slug=None, url=None):  # noqa: E501
+        """ICurrency - a model defined in Swagger"""  # noqa: E501
+
+        self._code = None
+        self._title = None
+        self._slug = None
+        self._url = None
+        self.discriminator = None
+
+        self.code = code
+        self.title = title
+        self.slug = slug
+        self.url = url
+
+    @property
+    def code(self):
+        """Gets the code of this ICurrency.  # noqa: E501
+
+
+        :return: The code of this ICurrency.  # noqa: E501
+        :rtype: str
+        """
+        return self._code
+
+    @code.setter
+    def code(self, code):
+        """Sets the code of this ICurrency.
+
+
+        :param code: The code of this ICurrency.  # noqa: E501
+        :type: str
+        """
+        if code is None:
+            raise ValueError("Invalid value for `code`, must not be `None`")  # noqa: E501
+
+        self._code = code
+
+    @property
+    def title(self):
+        """Gets the title of this ICurrency.  # noqa: E501
+
+
+        :return: The title of this ICurrency.  # noqa: E501
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title):
+        """Sets the title of this ICurrency.
+
+
+        :param title: The title of this ICurrency.  # noqa: E501
+        :type: str
+        """
+        if title is None:
+            raise ValueError("Invalid value for `title`, must not be `None`")  # noqa: E501
+
+        self._title = title
+
+    @property
+    def slug(self):
+        """Gets the slug of this ICurrency.  # noqa: E501
+
+
+        :return: The slug of this ICurrency.  # noqa: E501
+        :rtype: str
+        """
+        return self._slug
+
+    @slug.setter
+    def slug(self, slug):
+        """Sets the slug of this ICurrency.
+
+
+        :param slug: The slug of this ICurrency.  # noqa: E501
+        :type: str
+        """
+        if slug is None:
+            raise ValueError("Invalid value for `slug`, must not be `None`")  # noqa: E501
+
+        self._slug = slug
+
+    @property
+    def url(self):
+        """Gets the url of this ICurrency.  # noqa: E501
+
+
+        :return: The url of this ICurrency.  # noqa: E501
+        :rtype: str
+        """
+        return self._url
+
+    @url.setter
+    def url(self, url):
+        """Sets the url of this ICurrency.
+
+
+        :param url: The url of this ICurrency.  # noqa: E501
+        :type: str
+        """
+        if url is None:
+            raise ValueError("Invalid value for `url`, must not be `None`")  # noqa: E501
+
+        self._url = url
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, ICurrency):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
