# erc_dex/erc_dex/models/order.py
@@ -16,6 +16,8 @@ import re  # noqa: F401
 
 import six
 
+from erc_dex.models.account import Account  # noqa: F401,E501
+
 
 class Order(object):
     """NOTE: This class is auto generated by the swagger code generator program.
@@ -57,7 +59,8 @@ class Order(object):
         'state': 'float',
         'price': 'str',
         'sender_address': 'str',
-        'system': 'bool'
+        'system': 'bool',
+        'account': 'Account'
     }
 
     attribute_map = {
@@ -87,10 +90,11 @@ class Order(object):
         'state': 'state',
         'price': 'price',
         'sender_address': 'senderAddress',
-        'system': 'system'
+        'system': 'system',
+        'account': 'account'
     }
 
-    def __init__(self, id=None, date_created=None, date_updated=None, date_closed=None, exchange_address=None, expiration_time_seconds=None, fee_recipient_address=None, maker_address=None, maker_fee=None, maker_asset_address=None, maker_asset_data=None, taker_asset_data=None, maker_asset_amount=None, salt=None, signature=None, taker_address=None, taker_fee=None, taker_asset_address=None, taker_asset_amount=None, remaining_fillable_taker_amount=None, remaining_fillable_maker_amount=None, order_hash=None, account_id=None, state=None, price=None, sender_address=None, system=None):  # noqa: E501
+    def __init__(self, id=None, date_created=None, date_updated=None, date_closed=None, exchange_address=None, expiration_time_seconds=None, fee_recipient_address=None, maker_address=None, maker_fee=None, maker_asset_address=None, maker_asset_data=None, taker_asset_data=None, maker_asset_amount=None, salt=None, signature=None, taker_address=None, taker_fee=None, taker_asset_address=None, taker_asset_amount=None, remaining_fillable_taker_amount=None, remaining_fillable_maker_amount=None, order_hash=None, account_id=None, state=None, price=None, sender_address=None, system=None, account=None):  # noqa: E501
         """Order - a model defined in Swagger"""  # noqa: E501
 
         self._id = None
@@ -120,6 +124,7 @@ class Order(object):
         self._price = None
         self._sender_address = None
         self._system = None
+        self._account = None
         self.discriminator = None
 
         self.id = id
@@ -151,6 +156,8 @@ class Order(object):
         self.price = price
         self.sender_address = sender_address
         self.system = system
+        if account is not None:
+            self.account = account
 
     @property
     def id(self):
@@ -816,6 +823,27 @@ class Order(object):
             raise ValueError("Invalid value for `system`, must not be `None`")  # noqa: E501
 
         self._system = system
+
+    @property
+    def account(self):
+        """Gets the account of this Order.  # noqa: E501
+
+
+        :return: The account of this Order.  # noqa: E501
+        :rtype: Account
+        """
+        return self._account
+
+    @account.setter
+    def account(self, account):
+        """Sets the account of this Order.
+
+
+        :param account: The account of this Order.  # noqa: E501
+        :type: Account
+        """
+
+        self._account = account
 
     def to_dict(self):
         """Returns the model properties as a dict"""
